refactor(zoologico-service): correcciones de calidad y accesibilidad sugeridas por SonarQube